--- a/html_advanced/5-index.html
+++ b/html_advanced/5-index.html
@@ -12,9 +12,7 @@
             Header
         </header>
         <main>
-        <section>
-            Hero section
-        </section>
+        <p>Hero section</p>
         </main>
         <footer>
             Footer
