--- a/html_advanced/5-index.html
+++ b/html_advanced/5-index.html
@@ -13,6 +13,12 @@
         </header>
         <main>
         <p>Hero section</p>
+        <p>Services section</p>
+        <p>Works section</p>
+        <p>About section</p>
+        <p>Latest news section</p>
+        <p>Testimonials section</p>
+        <p>Contact section</p>
         </main>
         <footer>
             Footer
