--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -12,7 +12,7 @@
             Header
         </header>
         <main>
-        <p>Hero section <article Work #1 Work #2 Work #3></article></p>
+        <p>Hero section <article Work #1></article></p>
         <p>Services section</p>
         <p>Works section</p>
         <p>About section</p>
