--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -12,7 +12,7 @@
             Header
         </header>
         <main>
-        <p>Hero section <work id="1"></work></p>
+        <p><section>Work#1</section>Hero section</p>
         <p>Services section</p>
         <p>Works section</p>
         <p>About section</p>
