--- a/html_advanced/15-index.html
+++ b/html_advanced/15-index.html
@@ -12,6 +12,7 @@
   <header><div><span>Techium</span><nav></nav></div></header>
   <main>
     <h1>Homepage</h1>
+    <div>
     <section>
       <h2>We help you build your brand!</h2>
     </section>
@@ -71,6 +72,7 @@
       <h2>Contact</h2>
       <p>We like to know new people</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+    </div>
     </section>
   </main>
   <footer>Footer</footer>
